--- a/Debugging/EvReportVB.tt
+++ b/Debugging/EvReportVB.tt
@@ -2,6 +2,43 @@
 <#@ output extension=".txt" #>
 <#@ Ev processor="EvDirectiveProcessor" requires="fileName='Sample.visualEv'" #>
 
-Generated material. Generating code in VB.
+Report template
 
+<#= this.EvModel.Name #>
 
+<#
+  foreach (ModelType type in this.EvModel.Types)
+  {
+#>
+	<#= type.GetType().Name #> <#= type.Name #>
+<#
+	ModelClass modelClass = type as ModelClass;
+	if (modelClass != null)
+	{
+	  if (modelClass.Targets.Count > 0)
+	  {
+#>
+		Classes linked by Associations:
+<#
+		// Direct jump to linked elements (compare with the association loop below)
+		foreach (ModelClass target in modelClass.Targets)
+		{
+#>
+			 <#= target.Name #>
+<#	    
+		}
+	
+#>
+		Details of those Associations:
+<#
+		// Step to link, then to its other end
+		foreach (Association association in Association.GetLinksToTargets(modelClass))
+		{
+#>
+			<#= association.GetType().Name #> {<#= association.SourceMultiplicity #> - <#= association.TargetMultiplicity #>}   <#= association.Target.Name #>
+<#	    
+		}
+	  } 
+	}
+  }
+#>
