--- a/Debugging/Bug.tt
+++ b/Debugging/Bug.tt
@@ -1,16 +1,17 @@
 ﻿<#@ template inherits="Microsoft.VisualStudio.TextTemplating.VSHost.ModelingTextTransformation" #>
 <#@ output extension=".ev" #>
-<#@ Ev processor="EvDirectiveProcessor" requires="fileName='Sample.visualEv'" #>
+<#@ Ev processor="EvDirectiveProcessor" requires="fileName='Bug.visualEv'" #>
 <#@ assembly name="System.Core" #>
 <#@ import namespace="System.Linq" #>
 
+Create <#= this.EvModel.Name #> <#= this.EvModel.Email #> <#= this.EvModel.Password #>
 <#
 foreach (Option element in this.EvModel.Elements)
 {
 	string types = "";
 	string show = "";
 #>
-
+	
 add <#= element.OptionType #>
 	<#	types = string.Join(
                 ",", //Change the value here to separate the strings.
@@ -26,7 +27,7 @@ add <#= element.OptionType #>
                 (from property in element.Types
                  select property.Name).ToArray());
 	if(show == "All" ){
-		show = "show Insert,Update,Search,Remove,ListAll,Management.";
+		show = "show Insert,Update,Search,Remove,ListAll.";
 	}
 	else if(show != string.Empty){
 		show = "show " + show + ".";
@@ -34,8 +35,11 @@ add <#= element.OptionType #>
 
 	#>	
 	<#= show #>
+	
 	<# foreach(OptionHasFunctions assoc in OptionHasFunctions.GetLinksToFunctions(element)){ #>
-	<# if (assoc.Function.hasView) { #> def <# }else{ #> if <# } #><#= assoc.Option.OptionType #><# if (assoc.Param != string.Empty){ #>.<#=assoc.Param #><#}#>-><#= assoc.Function.Name #><# } #>
+	
+	<# if (assoc.Var != string.Empty) { #>if <#= assoc.Option.OptionType #>.<#=assoc.Var #>-><#= assoc.Function.Name #> <# } else { #>def <#= assoc.Option.OptionType #> -> <#= assoc.Function.Name #> <# } #><# } #>
+
 <#    
 }
 #>
