--- a/Debugging/EvReport.tt
+++ b/Debugging/EvReport.tt
@@ -1,6 +1,6 @@
 ﻿<#@ template inherits="Microsoft.VisualStudio.TextTemplating.VSHost.ModelingTextTransformation" #>
 <#@ output extension=".ev" #>
-<#@ Ev processor="EvDirectiveProcessor" requires="fileName='Sample.visualEv'" #>
+<#@ Ev processor="EvDirectiveProcessor" requires="fileName='Test.visualEv'" #>
 <#@ assembly name="System.Core" #>
 <#@ import namespace="System.Linq" #>
 
