--- a/Debugging/EvReport.tt
+++ b/Debugging/EvReport.tt
@@ -15,8 +15,8 @@ foreach (Option element in this.EvModel.Elements)
 add <#= element.OptionType #>
 	<#	types = string.Join(
                 ",", //Change the value here to separate the strings.
-                (from property in element.Properties
-                 select property.Name).ToArray());
+                (from category in element.Categories
+                 select category.Name).ToArray());
 	if(types != string.Empty){
 		types = "types " + types + ".";
 	}
@@ -24,8 +24,8 @@ add <#= element.OptionType #>
 	<#= types #>
 	<#	show = string.Join(
                 ",", //Change the value here to separate the strings.
-                (from property in element.Types
-                 select property.Name).ToArray());
+                (from command in element.Commands
+                 select command.Name).ToArray());
 	if(show == "All" ){
 		show = "show Insert Update Search Remove ListAll Management";
 	}
